--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "tasks": {
     "day1a": "deno run --allow-read day/1/part1.ts",
     "day1b": "deno run --allow-read day/1/part2.ts",
-    "day2a": "deno run --allow-read day/2/part1.ts"
+    "day2a": "deno run --allow-read day/2/part1.ts",
+    "day2b": "deno run --allow-read day/2/part2.ts"
   }
 }
