--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,7 @@
 {
   "tasks": {
+    "test": "deno test --allow-read",
+    "test-only-example": "deno test --allow-read --filter \"Day 6 part 1\"",
     "day1a": "deno run --allow-read day/1/part1.ts",
     "day1b": "deno run --allow-read day/1/part2.ts",
     "day2a": "deno run --allow-read day/2/part1.ts",
