test: create all unit tests

--- a/deno.json
+++ b/deno.json
@@ -1,56 +1,6 @@
 {
   "tasks": {
     "test": "deno test --allow-read",
-    "test-only-example": "deno test --allow-read --filter \"Day 6 part 1\"",
-    "day1a": "deno run --allow-read day/1/part1.ts",
-    "day1b": "deno run --allow-read day/1/part2.ts",
-    "day2a": "deno run --allow-read day/2/part1.ts",
-    "day2b": "deno run --allow-read day/2/part2.ts",
-    "day3a": "deno run --allow-read day/3/part1.ts",
-    "day3b": "deno run --allow-read day/3/part2.ts",
-    "day4a": "deno run --allow-read day/4/part1.ts",
-    "day4b": "deno run --allow-read day/4/part2.ts",
-    "day5a": "deno run --allow-read day/5/part1.ts",
-    "day5b": "deno run --allow-read day/5/part2.ts",
-    "day6a": "deno run --allow-read day/6/part1.ts",
-    "day6b": "deno run --allow-read day/6/part2.ts",
-    "day7a": "deno run --allow-read day/7/part1.ts",
-    "day7b": "deno run --allow-read day/7/part2.ts",
-    "day8a": "deno run --allow-read day/8/part1.ts",
-    "day8b": "deno run --allow-read day/8/part2.ts",
-    "day9a": "deno run --allow-read day/9/part1.ts",
-    "day9b": "deno run --allow-read day/9/part2.ts",
-    "day10a": "deno run --allow-read day/10/part1.ts",
-    "day10b": "deno run --allow-read day/10/part2.ts",
-    "day11a": "deno run --allow-read day/11/part1.ts",
-    "day11b": "deno run --allow-read day/11/part2.ts",
-    "day12a": "deno run --allow-read day/12/part1.ts",
-    "day12b": "deno run --allow-read day/12/part2.ts",
-    "day13a": "deno run --allow-read day/13/part1.ts",
-    "day13b": "deno run --allow-read day/13/part2.ts",
-    "day14a": "deno run --allow-read day/14/part1.ts",
-    "day14b": "deno run --allow-read day/14/part2.ts",
-    "day15a": "deno run --allow-read day/15/part1.ts",
-    "day15b": "deno run --allow-read day/15/part2.ts",
-    "day16a": "deno run --allow-read day/16/part1.ts",
-    "day16b": "deno run --allow-read day/16/part2.ts",
-    "day17a": "deno run --allow-read day/17/part1.ts",
-    "day17b": "deno run --allow-read day/17/part2.ts",
-    "day18a": "deno run --allow-read day/18/part1.ts",
-    "day18b": "deno run --allow-read day/18/part2.ts",
-    "day19a": "deno run --allow-read day/19/part1.ts",
-    "day19b": "deno run --allow-read day/19/part2.ts",
-    "day20a": "deno run --allow-read day/20/part1.ts",
-    "day20b": "deno run --allow-read day/20/part2.ts",
-    "day21a": "deno run --allow-read day/21/part1.ts",
-    "day21b": "deno run --allow-read day/21/part2.ts",
-    "day22a": "deno run --allow-read day/22/part1.ts",
-    "day22b": "deno run --allow-read day/22/part2.ts",
-    "day23a": "deno run --allow-read day/23/part1.ts",
-    "day23b": "deno run --allow-read day/23/part2.ts",
-    "day24a": "deno run --allow-read day/24/part1.ts",
-    "day24b": "deno run --allow-read day/24/part2.ts",
-    "day25a": "deno run --allow-read day/25/part1.ts",
-    "day25b": "deno run --allow-read day/25/part2.ts"
+    "test-only-example": "deno test --allow-read --filter \"Day 6 part 1\""
   }
 }
