:white_check_mark: test: tag some tests as TOO LONG so they are not executed during normal global checks
Use another task to run every tests

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "test": "deno test --allow-read"
+    "test": "deno test --allow-read --filter \"/^Day \\d+ part \\d+$/\"",
+    "test-even-long": "deno test --allow-read"
   },
   "imports": {
     "@std/collections": "jsr:@std/collections@^1.0.9"
