--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "test": "deno test --allow-read --filter \"/^Day \\d+ part \\d+$/\"",
-    "test-even-long": "deno test --allow-read"
+    "test": "deno test --allow-read --allow-write --filter \"/^Day \\d+ part \\d+$/\"",
+    "test-even-long": "deno test --allow-read --allow-write"
   },
   "imports": {
     "@std/collections": "jsr:@std/collections@^1.0.9"
